# pgdb_to_struct

./: .gitignore  Cargo.toml  LICENSE  README.md  app.properties
src/: main.rs
src/test/: mod.rs
