[package]
name = "pgdb_to_struct"
version = "0.1.3"
edition = "2021"
description = "A Rust CLI application to generate Rust struct files from PostgreSQL database tables."
license = "MIT"
readme = "README.md"
keywords = ["cli", "postgres", "database", "struct", "generator"]
categories = ["data-structures"]
repository = "https://github.com/claudiomontchaves/pgdb_to_struct"
documentation = "https://docs.rs/pgdb_to_struct"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app_properties = "0.1.2"
tokio = { version = "1.28.2", features = ["full"] }
sqlx = { version = "0.7.1", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
] }
uuid = "1.4.1"
